# openclaw-firecracker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build-rootfs.sh  cdk.context.json  cdk.json  config.yml  config.yml.example  destroy.sh  oc-connect.sh  oc-dashboard.sh  open-console.sh  pyproject.toml  pytest.ini  setup.sh  web-console.sh
.kiro/settings/: lsp.json
console/: config.js  index.html  style.css
deploy/: app.py  stack.py
deploy/lambda/api/: handler.py
deploy/lambda/backup/: handler.py
deploy/lambda/health_check/: handler.py
deploy/lambda/scaler/: handler.py
deploy/lambda/skills/: handler.py
deploy/lambda/templates/: handler.py
deploy/userdata/: backup-data.sh  host-agent.py  host-agent.service  init-host.sh  launch-vm.sh  overlay-init  stop-vm.sh
docs/: CHANGELOG.md  README-CN.md  balloon-verification.md  deployment-options.md
scripts/: bind-domain.sh  destroy.sh  oc-connect.sh  oc-dashboard.sh
templates/: openclaw.json.example
tests/: conftest.py  test_api.py  test_balloon.py  test_e2e.py  test_health_check.py  test_scaler.py
